# rip

./: .gitignore  Cargo.toml
examples/: hello.rs
src/: lib.rs
src/openapi/v2/: contact.rs  info.rs  license.rs  mod.rs  operation.rs  parameter.rs  path.rs  pref.rs  response.rs  schema.rs  security.rs  spec.rs  tag.rs
src/openapi/v3/: component.rs  contact.rs  documentation.rs  encoding.rs  example.rs  header.rs  info.rs  license.rs  link.rs  media.rs  mod.rs  operation.rs  parameter.rs  path.rs  request.rs  response.rs  schema.rs  security.rs  server.rs  spec.rs  tag.rs
src/rest/: application.rs  contact.rs  documentation.rs  license.rs  mod.rs  scheme.rs  server.rs
